--- a/Mini_Projekt/css/style.css
+++ b/Mini_Projekt/css/style.css
@@ -33,7 +33,8 @@ nav {
 }
 
 nav a {
-    width: 20%;
+    width: 10%;
+    min-width: fit-content;
     padding: 6pt;
     background: #0000a0;
     color: white;
@@ -54,13 +55,15 @@ nav a:hover {
     display: inline-block;
     margin-right: 4px;
     padding: 0;
-    width: 20%;
+    width: 10%;
+    min-width: fit-content;
 }
 
 .dropdown > a {
     position: relative;
     display: inline-block;
     width: 100%;
+    min-width: fit-content;
 }
 
 .dropdown-content {
@@ -147,7 +150,7 @@ footer {
     justify-content: space-between;
 }
 
-@media screen and (max-width: 770px) {
+@media screen and (max-width: 700px) {
 
     .flex-main-with-aside {
         flex-direction: column;
@@ -193,5 +196,9 @@ footer {
 
     .dropdown-content > a {
         text-align: center;
+    }
+
+    h2 {
+        margin-top: 5%;
     }
 }
